# json_db

./: LICENSE  README.md  __init__.py  collection.py  db.py  pyproject.toml  test_collection.py
src/owi_jsondb/: __init__.py  collection.py  db.py
